--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,9 @@
       "@/pages": ["./pages"],
       "@/pages/*": ["./pages/*"],
       "@/shared": ["./shared"],
-      "@/shared/*": ["./shared/*"]
+      "@/shared/*": ["./shared/*"],
+      "@/types": ["./types"],
+      "@/types/*": ["./types/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/global.d.ts"] 
