--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.67.0",
+    "react-mobile-picker": "^1.2.0",
     "react-router-dom": "^7.0.0",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
